ui(welcome) removed incomplete feature of api

--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -8,14 +8,14 @@
         <p mdcBody1>Grab the meta data from any website as quickly as possible without hassle</p>
     </div>
 
-    <div class="grid-item grid-item--3">
+    <!-- <div class="grid-item grid-item--3">
         <h4 mdcHeadline4>Never have another broken link again.</h4>
         <p mdcBody1>Cache websites and url links, and never break another user experience again.</p>
     </div>
 
     <div class="grid-item grid-item--4">
         <img src="/assets/images/173.png">
-    </div>
+    </div> -->
 
     
     <!-- <div class="grid-item grid-item--5">
